add jvm parameters and fix README tar.gz filename